tests/spec/compile-pass/012_self_receivers.zn
// category: compile-pass
// profile: freestanding
// purpose: self, mut self, and move self follow receiver access rules

module tests.pass.selfReceivers;

struct Counter {
    value: U32,
}

impl Counter {
    fn get(self) -> U32 {
        return self.value;
    }

    fn bump(mut self) {
        self.value = self.value + 1;
    }

    fn finish(move self) -> U32 {
        return self.value;
    }
}

fn main() {
    var counter = Counter { value: 1 };
    let before = counter.get();
    counter.bump();
    let after = counter.finish();
    let ignored = before + after;
}
